# TP-C_CPP

./: .gitignore  README.md
.circleci/: config.yml
tp_iz1/: .travis.yml  CMakeLists.txt
tp_iz1/include/: geometry.h
tp_iz1/src/: geometry.c  main.c
tp_iz1/tests/: geometry_test.cpp
tp_iz2/: CMakeLists.txt  stress_test.c
tp_iz2/employee/: employee.c  employee.h
tp_iz2/employee_arr/: employee_arr.c  employee_arr.h
tp_iz2/include_main_func/: main_func.c  main_func.h
tp_iz2/list_position_experience/: list_position_experience.c  list_position_experience.h  shared_make_report.c  static_make_report.c
tp_iz2/src/: main.c
tp_iz2/tests/: add_employee_test.cpp  free_node_test.cpp  get_sum_test.cpp  make_report_test.cpp  read_file_test.cpp
